Always show scrollbar to fix jumping layout

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,3 +7,7 @@
     @apply bg-gray-50;
   }
 }
+
+html, body {
+  overflow-y: scroll;
+}
